Fix images bug and change book alignment

--- a/src/styles/Category.css
+++ b/src/styles/Category.css
@@ -7,9 +7,10 @@ hr {
 }
 
 .books-container {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: start;
   align-items: start;
   margin: 3rem;
   gap: 2rem;
